# open-quiz-svc

./: .dockerignore  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 0001_initial_create_tables.py  11b8e3e66b77_optimize_db_schema.py  11e8a5040166_initial.py  1e7bb4d71e2e_initial_schema.py  2476afd8efb8_autogen_initial.py  3a9f1c2e8d47_add_difficulty_question_count_to_matches.py  6ae400a1dd89_add_created_at_to_matches.py  b8522aab4ac9_autogen_next.py
app/: main.py  metrics.py
app/ai/: engine.py  prompts.py  validator.py  worker.py
app/ai/jobs/: model.py  repository.py
app/ai/providers/: base.py  (+1 more)
app/api/: game.py  health.py  matches.py
app/core/: app_state.py  config.py  lifespan.py  logging.py  redis.py
app/domain/: event_types.py  events.py
app/models/: game.py  ws.py
app/repositories/: answer_repository.py  match_player_repository.py  match_repository.py  player_repository.py  question_repository.py
app/services/: answer_service.py  game_loop.py  game_service.py  match_result.py  question_service.py  scoring.py
app/websocket/: event_gateway.py  handlers.py  router.py  schemas.py
docs/: architecture.md
scripts/: README.md  load_env.sh  run_integration.sh  run_unit_tests.sh
tests/: test_session_rehydration.py
tests/integration/: test_health_endpoint.py
tests/unit/: test_game_loop.py  test_game_service.py  test_game_service_logging.py  test_game_session.py
(+22 files in other folders)
